# VertiefungSoftwareengineering

./: .gitignore  .pylintrc  Dockerfile  Doxyfile  Jenkinsfile  README.md  makedoc.sh  requirements.txt  start_build_server.sh
Eigenface/: CMakeLists.txt
Eigenface/cython/: CMakeLists.txt  Eigenface.c  Eigenface.pxd  Eigenface.pyx  setup.py
Eigenface/include/: Eigenface.h  EigenfaceEigenvectorFinder.h  EigenfaceMain.h  EigenfaceMathBase.h
Eigenface/python/: test_Eigenface.py
Eigenface/src/: CMakeLists.txt  EigenfaceMain.cpp
Eigenface/test/: CMakeLists.txt
Eigenface/test/src/: test_Eigenface.cpp  test_EigenfaceEigenvectorFinder.cpp  test_EigenfaceMathBase.cpp
WebappDemo/: .pylintrc  Dockerfile  main.py  requirements.txt
WebappDemo/content/: index.html
WebappDemo/src/: eigenfaceDemo.py  eigenfaceDispatcher.py  main.py
build_scripts/: deploy.sh  dockerBuildLocal  dockerRun.sh  dockerRunDemo.sh  makeC.sh  makedemo.sh  makedoc.sh
docu/ausarbeitung/: main.bib  main.tex  sources.bib
docu/ausarbeitung/chapters/: abkuerzungen.tex  anwendung.tex  developmentStrat.tex  einleitung.tex  tools.tex  umgebung.tex
docu/ausarbeitung/res/: branching_scheme.drawio
docu/praesentation/: praesentation.md
